데이터 입력 기능 추가

--- a/RxSwiftStudy/View/Base.lproj/Main.storyboard
+++ b/RxSwiftStudy/View/Base.lproj/Main.storyboard
@@ -19,25 +19,34 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0an-FO-z23">
                                 <rect key="frame" x="0.0" y="113" width="393" height="635"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <button key="tableFooterView" hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ksK-T5-rpS">
+                                    <rect key="frame" x="0.0" y="119.33333206176758" width="393" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="tinted" image="plus.app.fill" catalog="system"/>
+                                    <connections>
+                                        <action selector="addButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JsR-ml-5Ss"/>
+                                    </connections>
+                                </button>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableItemViewCell" id="RDP-N0-bYJ" customClass="TableItemViewCell" customModule="RxSwiftStudy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="41"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="41.333332061767578"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RDP-N0-bYJ" id="1Ux-ZR-rLK">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="41"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="41.333332061767578"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3B9-fm-phI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="41"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="41.333333333333336"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQV-ez-F3V">
-                                                            <rect key="frame" x="321.66666666666669" y="10" width="41.333333333333314" height="21"/>
+                                                            <rect key="frame" x="321.66666666666669" y="9.9999999999999982" width="41.333333333333314" height="21.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nej-0u-mIL">
-                                                            <rect key="frame" x="30.000000000000004" y="10" width="41.333333333333343" height="21"/>
+                                                            <rect key="frame" x="30.000000000000004" y="9.9999999999999982" width="41.333333333333343" height="21.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -111,6 +120,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="가계부" id="5Zq-7p-gp8"/>
                     <connections>
+                        <outlet property="addButton" destination="ksK-T5-rpS" id="Vam-cT-bPi"/>
                         <outlet property="tableView" destination="0an-FO-z23" id="E9G-C2-N6y"/>
                         <outlet property="totalPriceLabel" destination="JsH-KS-KB3" id="t5y-d0-kAO"/>
                     </connections>
@@ -142,6 +152,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="plus.app.fill" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
