--- a/RxSwiftStudy/View/Base.lproj/Main.storyboard
+++ b/RxSwiftStudy/View/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="113" width="393" height="635"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <button key="tableFooterView" hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ksK-T5-rpS">
-                                    <rect key="frame" x="0.0" y="118.66666793823242" width="393" height="44"/>
+                                    <rect key="frame" x="0.0" y="119.33333206176758" width="393" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="tinted" image="plus.app.fill" catalog="system"/>
@@ -31,23 +31,23 @@
                                 </button>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableItemViewCell" id="RDP-N0-bYJ" customClass="TableItemViewCell" customModule="RxSwiftStudy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="40.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="41.333332061767578"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RDP-N0-bYJ" id="1Ux-ZR-rLK">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="40.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="41.333332061767578"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3B9-fm-phI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="40.666666666666664"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="41.333333333333336"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQV-ez-F3V">
-                                                            <rect key="frame" x="321.66666666666669" y="10.000000000000002" width="41.333333333333314" height="20.666666666666671"/>
+                                                            <rect key="frame" x="321.66666666666669" y="9.9999999999999982" width="41.333333333333314" height="21.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nej-0u-mIL">
-                                                            <rect key="frame" x="30.000000000000004" y="10.000000000000002" width="41.333333333333343" height="20.666666666666671"/>
+                                                            <rect key="frame" x="30.000000000000004" y="9.9999999999999982" width="41.333333333333343" height="21.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -139,19 +139,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="메뉴 이름" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06L-NH-ccF">
-                                <rect key="frame" x="96.666666666666686" y="159" width="200" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="cv8-FH-IVA"/>
-                                </constraints>
+                                <rect key="frame" x="141.33333333333334" y="159" width="110.33333333333334" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qf2-cf-GZR">
                                 <rect key="frame" x="162" y="276" width="69" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="hv0-WB-y8w"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -159,9 +153,6 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="카테고리" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ji1-9R-yRO">
                                 <rect key="frame" x="167" y="225" width="59" height="21"/>
                                 <color key="backgroundColor" name="AccentColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="ZFG-PI-dJU"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -176,11 +167,11 @@
                             <constraint firstItem="Ji1-9R-yRO" firstAttribute="centerX" secondItem="06L-NH-ccF" secondAttribute="centerX" id="L0T-CL-cAf"/>
                             <constraint firstItem="qf2-cf-GZR" firstAttribute="top" secondItem="Ji1-9R-yRO" secondAttribute="bottom" constant="30" id="Yad-ZD-4Qq"/>
                             <constraint firstItem="Ji1-9R-yRO" firstAttribute="top" secondItem="06L-NH-ccF" secondAttribute="bottom" constant="30" id="xDz-bo-eAO"/>
-                            <constraint firstItem="Dc4-Ex-LeQ" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qf2-cf-GZR" secondAttribute="bottom" constant="100" id="zMf-nu-cFC"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="393" height="500"/>
                     <connections>
+                        <outlet property="backView" destination="gmn-sK-8p8" id="7L7-LT-LE3"/>
                         <outlet property="category" destination="Ji1-9R-yRO" id="OQi-QO-v50"/>
                         <outlet property="name" destination="06L-NH-ccF" id="jlK-1k-gbM"/>
                         <outlet property="price" destination="qf2-cf-GZR" id="Tca-mQ-lm5"/>
